adds slide out navigation

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,7 +14,7 @@
  */
 
  @layer base {
-  
+
   main {
     @apply z-10 relative mb-[350px] overflow-scroll
   }
@@ -58,6 +58,22 @@
  @layer components {
   .indicator {
     @apply center h-6 w-6 rounded-full border-2
+  }
+
+  .top-nav li {
+    @apply font-condensed tracking-wide text-[72px] uppercase leading-none
+  }
+
+  .top-nav li a {
+    @apply hover:text-orangeRed
+  }
+
+  .bottom-nav ul {
+    @apply flex flex-col gap-3
+  }
+
+  .bottom-nav ul a {
+    @apply hover:text-orangeRed
   }
  }
 
