--- a/web/src/index.css
+++ b/web/src/index.css
@@ -73,6 +73,20 @@
  }
 
  @layer components {
+  h1.page-title {
+    @apply font-condensed m-0 p-0 text-center text-[116px] leading-[0.8] text-white
+  }
+
+  .with-rulers {
+    @apply flex items-center gap-7 justify-center
+  }
+
+  .with-rulers:before,
+  .with-rulers:after {
+    content: '';
+    @apply w-[72px] h-[6px] bg-current block
+  }
+
   .field {
     @apply mb-4
   }
