adds Invite Group Form

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,6 +19,7 @@
     @apply z-10 relative mb-[350px] overflow-scroll
   }
 
+  .label,
   label {
     @apply font-handwriting uppercase text-xl tracking-tighter
   }
@@ -78,6 +79,19 @@
  }
 
  @layer components {
+
+  .status-success {
+    @apply bg-spanishGreen text-white
+  }
+
+  .status-warning {
+    @apply bg-supernova text-black
+  }
+
+  .status-error {
+    @apply bg-orangeRed text-white rotate-45
+  }
+
   h1.page-title {
     @apply font-condensed m-0 p-0 text-center text-[116px] leading-[0.8] text-white
   }
