adds wishlist component

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -38,7 +38,11 @@
   input[type="number"],
   input[type="tel"],
   input[type="email"] {
-    @apply font-sans text-2xl h-[100px] w-full px-7 border-black border-2
+    @apply font-sans text-2xl h-[100px] w-full px-7
+  }
+
+  input.short {
+    @apply h-[52px] text-lg outline-none;
   }
 
   /* invalid label */
